# sumospeak

./: LICENSE  README.md
examples_scenarios/scenario_2Routes_Color/: agent.asl  example.net.xml  example.sumocfg  scenario.py
examples_scenarios/scenario_2Routes_takeFastest/: agent.asl  example.rou.xml  scenario.py
examples_scenarios/scenario_2Routes_waitForEveryone/: agent.asl  network.net.xml  network.rou.xml  scenario.py
examples_scenarios/scenario_randomRoute_multiple_trips/: multiple_trips.asl  network.rou.xml  scenario.py
examples_scenarios/scenario_randomRoute_single_trip/: control_agent.asl  network.net.xml  network.sumocfg  scenario.py  single_trip.asl
sumospeak/: pyproject.toml  setup.cfg
sumospeak/aswrapper/: __init__.py  aswrapper.py
sumospeak/sumospeak/: __init__.py  sumospeak.py
sumospeak/traciwrapper/: __init__.py  _traciactions.py  traciwrapper.py
sumospeak/utils/: __init__.py
