[metadata]
name = sumospeak
version = 0.0.1
author = Nelson Gregorio
author_email = nelson.a.s.gregorio@gmail.com
description = Interface with SUMO using agentspeak BDI agents
long_description = file: README.md
long_description_content_type = text/markdown
url = https://nogit.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    agentspeak==0.1.0
python_requires = >=3.7
include_package_data = True